# College_Tour

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  admin.cpp  admin.h  adminpage.cpp  adminpage.h  adminpage.ui  cart.cpp  cart.h  cart_page.cpp  cart_page.h  cart_page.ui  data_manager.cpp  data_manager.h  data_sqLite.cpp  data_types.h  distance_tracker.cpp  distance_tracker.h  distances_page.cpp  distances_page.h  home_page.cpp  home_page.h  homepage.ui  login_window.cpp  login_window.h  login_window.ui  main.cpp  manager.h  path_algo.cpp  planatrip.cpp  planatrip.h  planatrip.ui  resources.qrc  route_opt.cpp  shopping_cart.cpp  shopping_cart.h  trip_overview.cpp  trip_overview.h  (+4 more)
College_Tour/: CMakeLists.txt  home_page.cpp  home_page.h  main.cpp
College_Tour/res/: College Campus Distances and Souvenirs.xlsx
Doxygen/html/: admin_8h_source.html  adminpage_8h_source.html  annotated.html  annotated_dup.js  cart_8h_source.html  cart__page_8h_source.html  class_admin-members.html  class_admin.html  class_cart_page-members.html  class_cart_page.html  class_data_manager-members.html  class_data_manager.html  class_distance_tracker-members.html  class_distance_tracker.html  class_distances_page-members.html  class_distances_page.html  class_home_page-members.html  class_home_page.html  class_manager-members.html  class_manager.html  class_plan_a_trip-members.html  class_plan_a_trip.html  files.html  (+44 more)
data/: .gitignore  New_College_Campus_Distances.csv  college_campus_distances.csv  college_souvenirs.csv  college_tour.db  college_tour.db20260309_160635_574.bak
(+66 files in other folders)
